readability fixes

--- a/css/main.css
+++ b/css/main.css
@@ -24,6 +24,7 @@ body {
     line-height:1.6;
     margin-left: 10px;
     text-align:left;
+    font: size 16px;
 }
 
 a{
@@ -43,21 +44,33 @@ a{
     background-color: #ffffff;
     padding: 10px;
     box-shadow: 0 2px 5px #0000001a;
-    text-align: left;
+    text-align: center;
+    font: size 18px;
+    color:#b9376b;
+    font-weight: bold;
 }
 
+
 .fun-fact img {
-    margin-top: 10px;
+    display:block;
+    margin: 10px auto;
   }
 
 ul {
     list-style-type:circle;
     margin: 10px; 
     padding-left: 20px;
+    text-align:left;
+    font-size: 16px;
+    color:#000000;
+    font-weight:normal
   }
   
   ol {
     margin: 10px 0;
     padding-left: 20px;
-    text-align:left
+    text-align:left;
+    font-size:16px;
+    color:#000000;
+    font-weight:normal
   }
